--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
     <script>
         const CLIENT_ID = 'a657acb2c038484aa0283ed48eda8803';
-        const REDIRECT_URI = 'https://persongalitiy.com/';
+        const REDIRECT_URI = 'https://persongality.com/';
         const SCOPES = 'user-top-read user-read-recently-played user-read-playback-state';
 
         let accessToken = null;
