--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
     <script>
         const CLIENT_ID = 'a657acb2c038484aa0283ed48eda8803';
-        const REDIRECT_URI = 'http://127.0.0.1:3000/';
+        const REDIRECT_URI = 'https://persongality.com/';
         const SCOPES = 'user-top-read user-read-recently-played user-read-playback-state';
 
         let accessToken = null;
