--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                              font-style: italic;
                              margin-bottom: 25px;
                          ">
-                             If you are writing about us or really want to access it, email me at kevin.manuel41@ui.ac.id and I can grant you access through develpment mode.  - K.M.
+                             If you are writing about us or really want to access it, email me at kevin.manuel41@ui.ac.id and I can grant you access through development mode.  - K.M.
                          </div>
                          <div style="display: flex; gap: 12px; flex-wrap: wrap; justify-content: center;">
                              <button onclick="showDemoVideo()" style="
